<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:padding="8dp"
    android:textDirection="rtl">

    <ImageButton
        android:id="@+id/good_hours_list_item_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/good_hours_list_item_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/good_hours_list_item_time"
        app:srcCompat="@drawable/ic_cancel_black_24dp" />

    <TextView
        android:id="@+id/good_hours_list_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="Test1"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@id/good_hours_list_item_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/good_hours_list_item_day0"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/sunday"
        android:textColor="#fff"
        android:textOff="@string/sunday"
        android:textOn="@string/sunday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/good_hours_list_item_delete"
        app:layout_constraintTop_toBottomOf="@+id/good_hours_list_item_time" />

    <ToggleButton
        android:id="@+id/good_hours_list_item_day1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/monday"
        android:textColor="#fff"
        android:textOff="@string/monday"
        android:textOn="@string/monday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/good_hours_list_item_day0"
        app:layout_constraintTop_toBottomOf="@+id/good_hours_list_item_time" />

    <ToggleButton
        android:id="@+id/good_hours_list_item_day2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/tuesday"
        android:textColor="#fff"
        android:textOff="@string/tuesday"
        android:textOn="@string/tuesday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/good_hours_list_item_day1"
        app:layout_constraintTop_toBottomOf="@+id/good_hours_list_item_time" />

    <ToggleButton
        android:id="@+id/good_hours_list_item_day3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/wednesday"
        android:textColor="#fff"
        android:textOff="@string/wednesday"
        android:textOn="@string/wednesday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/good_hours_list_item_day2"
        app:layout_constraintTop_toBottomOf="@+id/good_hours_list_item_time" />

    <ToggleButton
        android:id="@+id/good_hours_list_item_day4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/thursday"
        android:textColor="#fff"
        android:textOff="@string/thursday"
        android:textOn="@string/thursday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/good_hours_list_item_day3"
        app:layout_constraintTop_toBottomOf="@+id/good_hours_list_item_time" />

    <ToggleButton
        android:id="@+id/good_hours_list_item_day5"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/friday"
        android:textColor="#fff"
        android:textOff="@string/friday"
        android:textOn="@string/friday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/good_hours_list_item_day4"
        app:layout_constraintTop_toBottomOf="@+id/good_hours_list_item_time" />

    <ToggleButton
        android:id="@+id/good_hours_list_item_day6"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/saturday"
        android:textColor="#fff"
        android:textOff="@string/saturday"
        android:textOn="@string/saturday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/good_hours_list_item_day5"
        app:layout_constraintTop_toBottomOf="@+id/good_hours_list_item_time" />

    <Switch
        android:id="@+id/good_hours_list_item_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/good_hours_list_item_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/good_hours_list_item_time" />


</android.support.constraint.ConstraintLayout>
